--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -51,6 +51,21 @@ h2, h3 {
   margin: 1em 0;
 }
 
+/* Modules list */
+
+#modules h1 {
+  font-size: 2em;
+  background: #999;
+  color: white;
+  margin: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 3;
+  position: relative;
+}
+
+
 .digit-block {
   margin-top: 5px;
   font-size: 1.5em;
